--- a/Music and Chronic Pain - Group Final Rmarkdown.Rmd
+++ b/Music and Chronic Pain - Group Final Rmarkdown.Rmd
@@ -10,13 +10,31 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+# ABSTRACT
+
+The influence of music on chronic pain was studied in this paper. Participants with fibromyalgia, a disorder that causes chronic pain, were exposed to either a control or music of choice, and their pain level was measured both before and after. With this data, statistical tests such as ANOVA and GLM were used to test for significance and come to a definitive conclusion.
+
+#BACKGROUND
+
+Fibromyalgia is a disease characterized by chronic, widespread pain and fatigue. Such a condition negatively impacts an individual's ability to function in daily life. As there is no easy treatment to improve these individual's quality of life, it is of the utmost importance to study a wide variety of therapies and treatments to improve how this condition is addressed.
+
+Classical music, for example, has long been associated with benefits in treatment and outcome.
+
+Our study addresses the affect of music on an individual's experience of chronic pain due to fibromyalgia. Participants in this study, all with this condition, split into two groups: control and treatment. These two groups are questioned about their pain level before then receiving the music treatment, either the control or music. The pain level of the participants is then once again taken.
+
+This study is important because it addresses a significant need in our society. Many individuals who struggle with this chronic pain have had unsatisfactory results with traditional medicine and treatment. Relief from chronic pain would improve quality of life for millions of Americans, thereby improving society and furthering our understanding of this disease.
+
 # QUESTION
 
-Does music decrease the experience of chronic pain associated with fibromyalgia? What type of music has the greatest effect on chronic pain?
+Does music treatment decrease the experience of chronic pain associated with fibromyalgia?
 
 # HYPOTHESIS
 
-Participants with fibromyalgia experiencing chronic pain will report less pain while listening to music. Classical music will have the most effective performance.
+Participants with fibromyalgia experiencing chronic pain will report less pain while listening to music compared to pink noise (control). Additionally, participants will report lower pain after listening to music than before music treatment.
+
+# PREDICTION
+
+We predict to see lower rates of pain in individuals after receiving music treatment compared to individuals who received the control treatment. We expect to see correlated significance in our statistical tests.
 
 # STATISTICAL TEST
 
@@ -24,84 +42,134 @@ We will test the significance of our data using Repeated-Measures ANOVA, which w
 
 For visualization, we will compare the bar plot of individual's pain scores across these three conditions.
 
-```{include=FALSE}
-# Load libraries
-library(tidyverse)
-library(ez)
-
-# Import data
-data <- read.csv("dataset.csv")
-
-# Check the structure of your dataset
-str(data)
-head(data)
-
-# Reshape data from wide to long format
-# (assuming each row = one participant, and columns = conditions)
-data_long <- data %>%
-  pivot_longer(cols = c(pic1, pic2, pi1, pim2),
-               names_to = "Condition",
-               values_to = "Pain")
-
-# Add a participant ID if not already present
-if(!"Participant" %in% names(data_long)){
-  data_long$Participant <- rep(1:(nrow(data_long)/4), each = 4)
-}
-
-# Run repeated-measures ANOVA
-anova_result <- ezANOVA(
-  data = data_long,
-  dv = Pain,
-  wid = Participant,
-  within = Condition,
-  detailed = TRUE
-)
-
-# View results
-print(anova_result)
-
-# Optional: pairwise comparisons (post-hoc)
-pairwise.t.test(data_long$Pain, data_long$Condition, paired = TRUE, p.adjust.method = "bonferroni")
-
-# Optional: bar plot with error bars
-ggplot(data_long, aes(x = Condition, y = Pain, fill = Condition)) +
-  stat_summary(fun = mean, geom = "bar", color = "black", width = 0.6) +
-  stat_summary(fun.data = mean_se, geom = "errorbar", width = 0.2) +
-  theme_minimal() +
-  labs(title = "Pain Ratings Across Conditions", y = "Pain (1–10)", x = "Condition")
-
-```
-
 # VISUALIZATION - BAR PLOT GRAPH
 
 In the x-axis of the bar plot are 4 conditions. pic1 is the first control, which measures pain level before playing pink music, and pic2 measures pain level after the pink music. pim1 and pim2 show pain levels before and after playing music of choice respectively.
 
-```{r boxplot, warning=FALSE}
+
+
+``` {r code chunk 1}
+
 library(ggplot2)
 library(tidyr)
 library(dplyr)
 
-#changed column setup to make box plot work
 data <- read.csv("dataset.csv")
-data_long <- data %>%
-  pivot_longer(cols = c(5, 6,7,8), names_to = "treatment", values_to = "value")
 
-#plot
-    ggplot(data_long, aes(x=treatment, y=value, fill=treatment)) + 
-    geom_boxplot(alpha=0.6) +
-    
-    scale_y_continuous(limits = c(0, 10), breaks = seq(0, 10, 1)) +
-  
-    theme_classic() +
-    theme(legend.position="none") +
-    scale_fill_brewer(palette="Spectral") +
-    theme(axis.text.x = element_text(size=15)) +
-    theme(axis.text.y = element_text(size=12)) + 
-    theme(axis.title.y = element_text(size=16, face="bold", margin = margin(r = 10))) +
-    ylab("Pain Level") +
-    xlab("")
+data_long <- data %>%
+  pivot_longer(
+    cols = c(pic1, pic2, pim1, pim2),
+    names_to = "treatment",
+    values_to = "value"
+  )
+
+ggplot(
+  data_long %>%
+    mutate(
+      treatment = recode(
+        treatment,
+        pic1 = "Before Control",
+        pic2 = "After Control",
+        pim1 = "Before Music",
+        pim2 = "After Music"
+      ),
+      treatment = factor(
+        treatment,
+        levels = c("Before Control", "After Control", "Before Music", "After Music")
+      )
+    ),
+  aes(x = treatment, y = value, fill = treatment)
+) +
+  geom_boxplot(alpha = 0.6) +
+  scale_y_continuous(breaks = seq(0, 10, 1)) +
+  coord_cartesian(ylim = c(0, 10)) +
+  scale_fill_brewer(palette = "Spectral") +
+  theme_classic() +
+  theme(
+    legend.position = "none",
+    axis.text.x = element_text(size = 12, face = "bold"),
+    axis.text.y = element_text(size = 12),
+    axis.title.x = element_text(size = 16, face = "bold", margin = margin(t = 10)),
+    axis.title.y = element_text(size = 16, face = "bold", margin = margin(r = 10))
+  ) +
+  xlab("Pain Intensity") +
+  ylab("Pain Level")
+
+
 ```
     
+```{r code chunk 2}
+
+# Pivot pic1 and pic2 into long format
+data_long <- data %>%
+  pivot_longer(cols = c(pic1, pic2), names_to = "treatment", values_to = "value")
+
+# Make boxplot
+ggplot(data_long, aes(x = treatment, y = value, fill = treatment)) +
+  geom_boxplot(alpha = 0.7, width = 0.6) +
+  theme_classic() +
+  scale_fill_brewer(palette = "Set1") +
+  ylab("Pain Level") +
+  xlab("Pain Intensity-Control 1 (before) and Pain Intensity-Control 2 (after)") +
+  theme(
+    axis.text = element_text(size = 14),
+    axis.title = element_text(size = 12, face = "bold"),
+    legend.position = "none"
+  )
+
+```
+
+```{r 3rd code chunk}
+library(ggplot2)
+library(tidyr)
+library(dplyr)
+
+# Read your dataset
+data <- read.csv("dataset.csv")
+
+# Pivot pic2 and pim2 into long format
+data_long <- data %>%
+  pivot_longer(cols = c(pim1, pim2), names_to = "treatment", values_to = "value")
+
+# Make boxplot
+ggplot(data_long, aes(x = treatment, y = value, fill = treatment)) +
+  geom_boxplot(alpha = 0.7, width = 0.6) +
+  theme_classic() +
+  scale_fill_brewer(palette = "Set1") +
+  ylab("Pain Level") +
+  xlab("Pain Intensity-Music 1 (before) and Pain Intensity-Music 2 (after)") +
+  theme(
+    axis.text = element_text(size = 14),
+    axis.title = element_text(size = 12, face = "bold"),
+    legend.position = "none"
+  )
+
+```
+
+``` {r code chunk pic2 vs pim2}
+library(ggplot2)
+library(tidyr)
+library(dplyr)
+
+data <- read.csv("dataset.csv")
+
+# Pivot pim1 and pim2 into long format
+data_long_pim <- data %>%
+  pivot_longer(cols = c(pic2, pim2), names_to = "treatment", values_to = "value")
+
+# Make boxplot
+ggplot(data_long_pim, aes(x = treatment, y = value, fill = treatment)) +
+  geom_boxplot(alpha = 0.7, width = 0.6) +
+  theme_classic() +
+  scale_fill_brewer(palette = "Set1") +
+  ylab("Pain Level") +
+  xlab("Pain Intensity-Control 2 (after) and Pain Intensity-Music 2 (after)") +
+  theme(
+    axis.text = element_text(size = 14),
+    axis.title = element_text(size = 12, face = "bold"),
+    legend.position = "none"
+  )
+```
 
 # REFERENCES     
 
